--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,12 +8,22 @@ logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
+#---
+# TODO Append connection to DB
+#---
 #spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:./db/shareit
+spring.datasource.url=jdbc:h2:mem:shareit
 spring.datasource.username=test
 spring.datasource.password=test
-spring.h2.console.enabled=true
+
+
+#spring.config.activate.on-profile=ci,test
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:file:./db/shareit
+#spring.datasource.username=test
+#spring.datasource.password=test
+#spring.h2.console.enabled=true
 spring.jackson.serialization.fail-on-empty-beans=false
 
 #spring.datasource.url=jdbc:postgresql://localhost:5432/shareIt
