--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,13 @@
 					<version>0.8.8</version>
 					<configuration>
 						<output>file</output>
+						<excludes>
+							<exclude>**/*QUser.class</exclude>
+							<exclude>**/*QItem.class</exclude>
+							<exclude>**/*QBooking.class</exclude>
+							<exclude>**/*QComment.class</exclude>
+							<exclude>**/*QItemRequest.class</exclude>
+						</excludes>
 					</configuration>
 					<executions>
 						<execution>
@@ -258,6 +265,10 @@
 			<id>check</id>
 			<build>
 				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-checkstyle-plugin</artifactId>
+					</plugin>
 					<plugin>
 						<groupId>com.github.spotbugs</groupId>
 						<artifactId>spotbugs-maven-plugin</artifactId>
